On the road to 2024.03:
Highlights:
- mkinitcpio release v38
- pacman release 6.1
- kernel 6.8.x
Environment:
- retrigger module loading on soft-reboot
- fixed missing ln binary
- added new background
- fixed plasma 6 application menu
setup:
- removed microcode lines from bootloader config files
---
2024.02 Highlights:
- kernel 6.7.6 on aarch64
- added automatic GeoIP mirror selection on -latest ISOs/UKIs
- added bcachefs support
- added archlinux-userland-fs-cmp
Environment:
- added pacman-key workaround on aarch64
- removed f2fs, jfs and nilfs2 support
- fixed ttyd to accept keyboard input again
- added CTRL-C hint to login message
- print full systemd version during boot
- fixed usb keyboards
- fixed fb0 hanging the boot process
- added pintctrl modules
setup:
- added single device bcachefs with compression support
- added mkinitcpio kms workaround on aarch64
- simplified _umountall routine
- fixed btrfs raid setup
- removed ext3, f2fs, jfs and nilfs2 support
- don't allow vfat on / device
- fixed typo in pacman_bootloader_hook
clock:
- fixed clock script bug/hang if hwclock was not running in UTC mode
update:
- added automatic GeoIP mirror selection on -latest ISOs/UKIs
- only copy package cache to new environment on >=4G RAM machines
- removed kexec quirk on aarch64
---
2024.01 Highlights:
- kernel 6.7.x
Environment:
- switch to dbus-broker
- added bcachefs-tools
---
2023.12 Highlights:
- systemd 255
- grub 2.12
Environment:
- switched to systemd soft-reboot mechanism, instead of switch-root
---
2023.11 Highlights:
- kernel 6.6.x
Environment:
- switched to systemd in early userspace
- reenabled configfs for systemd
- moved mounting directories in init.service to /mnt/{cdrom,ventoy,efi}
- create empty root password in a much better way
- moved vconsole setup and screen detection to systemd service 
- added upcoming systemd 255 support
- fixed retina high resolution on aarch64
init:
- functionalized messages
- removed all quirks for modules handling