@@ -16,7 +16,7 @@
 <p><span><img src="logo.png" alt="Logo"></span></p>
 <h1>Archboot Home | <a href="https://archboot.com/gallery.html">Gallery</a> | <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=Z7GXKW4MKHK7C"><img src="donate.png" alt="Donate"></a></h1>
 <h2>2024 Hosting donations: <progress max="100" value="0">0%</progress> 100%</h2>
-<p><strong>&copy; 2006 - 2024 | <a href=mailto:tpowa@archlinux.org>Tobias Powalowski</a></strong> | Arch Linux Developer <strong><a href="https://archlinux.org/people/developers/#tpowa">tpowa</a></strong><br><strong>Last update: 02.03.2024 15:50</strong></p>
+<p><strong>&copy; 2006 - 2024 | <a href=mailto:tpowa@archlinux.org>Tobias Powalowski</a></strong> | Arch Linux Developer <strong><a href="https://archlinux.org/people/developers/#tpowa">tpowa</a></strong><br><strong>Last update: 17.03.2024 19:22</strong></p>
 <nav id="TOC" role="doc-toc">
 <ul>
 <li><a href="#introduction" id="toc-introduction"><strong><span class="toc-section-number">1.</span> Introduction</strong></a></li>
@@ -74,7 +74,7 @@
 <ul>
 <li><a href="https://www.reddit.com/r/archboot/"><strong>Latest News</strong></a>, <a href="https://gitlab.archlinux.org/tpowa/archboot/-/blob/master/CHANGELOG"><strong>Changelog</strong></a></li>
 <li><strong>Release schedule</strong>: on kernel updates, important package updates, bugfixing and feature updates</li>
-<li><a href="/src"><strong>Build Sources</strong></a></li>
+<li><a href="https://src.archboot.com"><strong>Build Sources</strong></a></li>
 <li><a href="https://wiki.syslinux.org/wiki/index.php?title=Isohybrid"><strong>Hybrid images</strong></a>, <a href="https://wiki.archlinux.org/title/Unified_kernel_image" title="UKI"><strong>Unified Kernel Images</strong></a>, <a href="https://wiki.archlinux.org/title/Kernel" title="Kernel"><strong>Kernels</strong></a>, <a href="https://wiki.archlinux.org/title/Initrd" title="Initrd"><strong>Initrd</strong></a>, and <a href="https://wiki.archlinux.org/title/Microcode" title="Microcode"><strong>Microcodes</strong></a> are provided.</li>
 <li><strong>PGP KEY</strong>: <a href="https://keyserver.ubuntu.com/pks/lookup?op=vindex&amp;fingerprint=on&amp;exact=on&amp;search=0x5B7E3FB71B7F10329A1C03AB771DF6627EDF681F"><strong>5B7E 3FB7 1B7F 1032 9A1C 03AB 771D F662 7EDF 681F</strong></a> for file verification is provided.</li>
 <li><strong>Supported Glibc Locales</strong>: be, bg, cs, da, de, en, el, es, fi, fr, hu, it, lt, lv, mk, nl, nn, pl, pt, ro, ru, sk, sr, sv, tr, uk</li>
@@ -1004,7 +1004,7 @@ The calculated size to boot the image follows the formula:<br>
 <tr class="odd">
 <td><code>[archboot]</code><br>
 <code># GeoIP</code><br>
-<code>Server = https://archboot.com/pkg</code><br>
+<code>Server = https://pkg.archboot.com</code><br>
 </td>
 </tr>
 </tbody>
@@ -1055,7 +1055,7 @@ The calculated size to boot the image follows the formula:<br>
 </thead>
 <tbody>
 <tr class="odd">
-<td><code># archboot-x86_64-release.sh &lt;directory&gt; \<br>https://archboot.com/src/iso/x86_64/latest/</code></td>
+<td><code># archboot-x86_64-release.sh &lt;directory&gt; \<br>https://src.archboot.com/iso/x86_64/latest/</code></td>
 </tr>
 </tbody>
 </table>
@@ -1431,7 +1431,7 @@ Functions supported in <strong>/usr/lib/archboot/cpio/hooks/&lt;hook&gt;</strong
 <li><a href="https://gitlab.archlinux.org/tpowa/archboot"><strong>Development</strong></a></li>
 <li><a href="/iso"><strong>Download</strong></a>
 <li><a href="gallery.html" target="_blank"><strong>Screenshots</strong></a></li>
-<li><a href="/src"><strong>Build Sources</strong></a></li>
+<li><a href="https://src.archboot.com"><strong>Build Sources</strong></a></li>
 <li><a href="https://gitlab.archlinux.org/tpowa/archboot-repository"><strong>Repository</strong></a></li>
 </ul>
 <h2 data-number="11" id="videos"><span class="header-section-number">11.</span> Videos</h2>
